# webapi-py

./: .editorconfig  .gitignore  README.md  pyproject.toml
src/webapi/: __init__.py  __main__.py  _types.py  caller.py  credentials.py  main.py  session.py
src/webapi/dummy/: auth.py
tests/: test_caller.py  test_credentials.py  test_main.py  test_session.py
